# course4

./: .gitmodules  README.md  edu3.txt  edu4.sql  edu5.txt  edu6.txt  edu8.txt  lab3_1.txt  lab4.txt  lab5.txt  lab6.txt  lab7.txt  lab8.txt  ДОиК.docx  Политика.docx
DBMS/: Lab1_physical_create.sql  Ulianitsky1.txt  Ulianitsky2.txt  edu1.sql  edu2.sql  Отчёт2.docx
SAP/: НЕДЕЛЯ 2. СБЫТ Ульяницкий.docx
csds/: csds1.rb  csds1_old.rb  ПРОЧИТАЙМЕНЯ.md
csds/.ipynb_checkpoints/: csds3-checkpoint.ipynb
diplom/: Задание на курсовой проект.docx  Курсовой проект.docx
iis/: Реферат1 Ульяницкий 1гр.docx
padc/: tmp.rb
padc/PIRV/: CMakeLists.txt  Lab_1.code-workspace  lab_1.sh  main.cpp  matrix_multiply.cpp  matrix_multiply.h  multiply_test.cpp  output.txt  utils.cpp  utils.h
padc/cache/: CMakeLists.txt  main.cpp
padc/lab1/: main.rb  test.csv  test.txt  test_main.rb  visualization.html
padc/lab1/.ipynb_checkpoints/: visualization-checkpoint.ipynb
padc/transposition/: CMakeLists.txt  main.cpp
sap/: НЕДЕЛЯ 3. ЗАКУПКИ Ульяницкий.docx  НЕДЕЛЯ 4. ПЛАНИРОВАНИЕ И ПРОИЗВОДСТВО Ульяницкий.docx  НЕДЕЛЯ 7. УПРАВЛЕНИЕ ПРОЕКТАМИ Ульяницкий.docx  Тест по теме Финансы и контроллинг-1.docx  Тест по теме финансы и контроллинг-2.docx  Тестовые вопросы SAP. Закупки.docx  Тестовые вопросы SAP. Планирование и производство.docx
sasm/Lab1/: lab.html  lab.ipynb
sasm/Lab2/: lab.html  lab.ipynb
